{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 35,
  "lineage": "24991c59-c809-4b11-2a32-b7c5a23d212c",
  "resources": [
    {
      "module": "module.vpc.module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "secrets",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:vpc-endpoint/vpce-0d8d9fae4423bb087",
            "dns_entry": [
              {
                "dns_name": "vpce-0d8d9fae4423bb087-kg0qufk1.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0d8d9fae4423bb087-kg0qufk1-us-east-2a.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0d8d9fae4423bb087-kg0qufk1-us-east-2b.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "secretsmanager.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z06026493KR36ADDG5MPN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d8d9fae4423bb087",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-010453a16835700ee",
              "eni-02d3d6c93338da32d"
            ],
            "owner_id": "173549513063",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-043bb8c6cf9ef3da2"
            ],
            "service_name": "com.amazonaws.us-east-2.secretsmanager",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.76",
                "subnet_id": "subnet-05a6378a057a3b2be"
              },
              {
                "ipv4": "10.0.2.153",
                "subnet_id": "subnet-0d21006290be8dd4c"
              }
            ],
            "subnet_ids": [
              "subnet-05a6378a057a3b2be",
              "subnet-0d21006290be8dd4c"
            ],
            "tags": {
              "Name": "secrets"
            },
            "tags_all": {
              "Name": "secrets"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "dependencies": [
            "module.vpc.data.aws_iam_policy_document.vpc_endpoint_policy_default",
            "module.vpc.module.endpoints.aws_security_group.this",
            "module.vpc.module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2959980582",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-043bb8c6cf9ef3da2",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.rds_sg.aws_security_group.this",
            "module.vpc.module.rds_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1931023167",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-043bb8c6cf9ef3da2",
            "security_group_rule_id": "sgr-0abdcc2e3b13c5c76",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.rds_sg.aws_security_group.this",
            "module.vpc.module.rds_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:network-acl/acl-05c6d9ee974993739",
            "default_network_acl_id": "acl-05c6d9ee974993739",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05c6d9ee974993739",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "173549513063",
            "subnet_ids": [
              "subnet-01bfa9ce1534d7314",
              "subnet-05a6378a057a3b2be",
              "subnet-083af7dac7a840a08",
              "subnet-0a769394130bab160",
              "subnet-0d21006290be8dd4c",
              "subnet-0d271a50098790f54"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:route-table/rtb-03dfbef36e95cdad7",
            "default_route_table_id": "rtb-03dfbef36e95cdad7",
            "id": "rtb-03dfbef36e95cdad7",
            "owner_id": "173549513063",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:security-group/sg-043bb8c6cf9ef3da2",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043bb8c6cf9ef3da2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "173549513063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08064ffafea9c2923",
            "arn": "arn:aws:ec2:us-east-2:173549513063:elastic-ip/eipalloc-08064ffafea9c2923",
            "association_id": "eipassoc-0701d462c0de9ec47",
            "domain": "vpc",
            "id": "eipalloc-08064ffafea9c2923",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0afa05c0635547024",
            "private_dns": "ip-10-0-101-74.us-east-2.compute.internal",
            "private_ip": "10.0.101.74",
            "public_dns": "ec2-3-12-225-26.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.225.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ec665da4ff1cb9f",
            "arn": "arn:aws:ec2:us-east-2:173549513063:elastic-ip/eipalloc-01ec665da4ff1cb9f",
            "association_id": "eipassoc-0271ea348209001ae",
            "domain": "vpc",
            "id": "eipalloc-01ec665da4ff1cb9f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-07522b17ea20feb44",
            "private_dns": "ip-10-0-102-128.us-east-2.compute.internal",
            "private_ip": "10.0.102.128",
            "public_dns": "ec2-18-221-142-235.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.142.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-us-east-2b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:internet-gateway/igw-0fd6a1f8d2ed86699",
            "id": "igw-0fd6a1f8d2ed86699",
            "owner_id": "173549513063",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08064ffafea9c2923",
            "association_id": "eipassoc-0701d462c0de9ec47",
            "connectivity_type": "public",
            "id": "nat-05f974566724ba731",
            "network_interface_id": "eni-0afa05c0635547024",
            "private_ip": "10.0.101.74",
            "public_ip": "3.12.225.26",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a769394130bab160",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ec665da4ff1cb9f",
            "association_id": "eipassoc-0271ea348209001ae",
            "connectivity_type": "public",
            "id": "nat-061cb3447988d11c6",
            "network_interface_id": "eni-07522b17ea20feb44",
            "private_ip": "10.0.102.128",
            "public_ip": "18.221.142.235",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-083af7dac7a840a08",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-us-east-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fd6a1f8d2ed86699",
            "id": "r-rtb-009f960a2e938c8cb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-009f960a2e938c8cb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-059d62e3112829da21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05f974566724ba731",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-059d62e3112829da2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ff840ff1309f4cdb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-061cb3447988d11c6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff840ff1309f4cdb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fd6a1f8d2ed86699",
            "id": "r-rtb-0965800193da9c2a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0965800193da9c2a9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:route-table/rtb-009f960a2e938c8cb",
            "id": "rtb-009f960a2e938c8cb",
            "owner_id": "173549513063",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd6a1f8d2ed86699",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-db",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-db",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:route-table/rtb-059d62e3112829da2",
            "id": "rtb-059d62e3112829da2",
            "owner_id": "173549513063",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f974566724ba731",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:route-table/rtb-0ff840ff1309f4cdb",
            "id": "rtb-0ff840ff1309f4cdb",
            "owner_id": "173549513063",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-061cb3447988d11c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:route-table/rtb-0965800193da9c2a9",
            "id": "rtb-0965800193da9c2a9",
            "owner_id": "173549513063",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd6a1f8d2ed86699",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077fd3dde8b5b3113",
            "route_table_id": "rtb-009f960a2e938c8cb",
            "subnet_id": "subnet-0d271a50098790f54"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1e8199a0dbe8558",
            "route_table_id": "rtb-009f960a2e938c8cb",
            "subnet_id": "subnet-01bfa9ce1534d7314"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdc8acdb9366b2c3",
            "route_table_id": "rtb-059d62e3112829da2",
            "subnet_id": "subnet-05a6378a057a3b2be"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cde812e07f0b89bd",
            "route_table_id": "rtb-0ff840ff1309f4cdb",
            "subnet_id": "subnet-0d21006290be8dd4c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f6c9f240860dce9",
            "route_table_id": "rtb-0965800193da9c2a9",
            "subnet_id": "subnet-0a769394130bab160"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a256ea0f0b3a0d4e",
            "route_table_id": "rtb-0965800193da9c2a9",
            "subnet_id": "subnet-083af7dac7a840a08"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:subnet/subnet-0d271a50098790f54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d271a50098790f54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173549513063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-db-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-db-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:subnet/subnet-01bfa9ce1534d7314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bfa9ce1534d7314",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173549513063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-db-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-db-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:subnet/subnet-05a6378a057a3b2be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a6378a057a3b2be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173549513063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:subnet/subnet-0d21006290be8dd4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d21006290be8dd4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173549513063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:subnet/subnet-0a769394130bab160",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a769394130bab160",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173549513063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:subnet/subnet-083af7dac7a840a08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083af7dac7a840a08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173549513063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0daec2237ef237f90"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:173549513063:vpc/vpc-0daec2237ef237f90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c6d9ee974993739",
            "default_route_table_id": "rtb-03dfbef36e95cdad7",
            "default_security_group_id": "sg-043bb8c6cf9ef3da2",
            "dhcp_options_id": "dopt-0c95dc50aafcf8a05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0daec2237ef237f90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03dfbef36e95cdad7",
            "owner_id": "173549513063",
            "tags": {
              "Environment": "dev",
              "Name": "primary-services-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "primary-services-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}